fix logo not showing

--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,31 @@
-
 @import url(./assets/css/main.css);
 @import url(./assets/css/utility.css);
 @import url(bootstrap-icons);
 
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+    color: #535bf2;
 }
 
 /*body {*/
@@ -37,118 +37,123 @@ a:hover {
 /*}*/
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+    border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
+
+    a:hover {
+        color: #747bff;
+    }
+
+    button {
+        background-color: #f9f9f9;
+    }
 }
 
-.cardpro{
-  border:none;
+.cardpro {
+    border: none;
 
-  position:relative;
-  overflow:hidden;
-  border-radius:8px;
-  cursor:pointer;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
-.cardpro:before{
-  
-  content:"";
-  position:absolute;
-  left:0;
-  top:0;
-  width:4px;
-  height:100%;
-  background-color:#E1BEE7;
-  transform:scaleY(1);
-  transition:all 0.5s;
-  transform-origin: bottom
+.cardpro:before {
+
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background-color: #E1BEE7;
+    transform: scaleY(1);
+    transition: all 0.5s;
+    transform-origin: bottom
 }
 
-.cardpro:after{
-  
-  content:"";
-  position:absolute;
-  left:0;
-  top:0;
-  width:4px;
-  height:100%;
-  background-color:#211056;
-  transform:scaleY(0);
-  transition:all 0.5s;
-  transform-origin: bottom
+.cardpro:after {
+
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background-color: #211056;
+    transform: scaleY(0);
+    transition: all 0.5s;
+    transform-origin: bottom
 }
 
-.cardpro:hover::after{
-  transform:scaleY(1);
-}
-
-
-.fonts{
-  font-size:11px;
-}
-
-.social-list{
-  display:flex;
-  list-style:none;
-  justify-content:center;
-  padding:0;
-}
-
-.social-list li{
-  padding:10px;
-  color:#211056;
-  font-size:19px;
+.cardpro:hover::after {
+    transform: scaleY(1);
 }
 
 
-.buttons button:nth-child(1){
-     border:1px solid #211056 !important;
-     color:#211056;
-     height:40px;
+.fonts {
+    font-size: 11px;
 }
 
-.buttons button:nth-child(1):hover{
-     border:1px solid #211056 !important;
-     color:#fff;
-     height:40px;
-     background-color:#211056;
+.social-list {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
 }
 
-.buttons button:nth-child(2){
-     border:1px solid #211056 !important;
-     background-color:#211056;
-     color:#fff;
-      height:40px;
+.social-list li {
+    padding: 10px;
+    color: #211056;
+    font-size: 19px;
+}
+
+
+.buttons button:nth-child(1) {
+    border: 1px solid #211056 !important;
+    color: #211056;
+    height: 40px;
+}
+
+.buttons button:nth-child(1):hover {
+    border: 1px solid #211056 !important;
+    color: #fff;
+    height: 40px;
+    background-color: #211056;
+}
+
+.buttons button:nth-child(2) {
+    border: 1px solid #211056 !important;
+    background-color: #211056;
+    color: #fff;
+    height: 40px;
 }
